Update title to reflect domain

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Revised Portfolio Page</title>
+  <title>jiggyflyjoe.com</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
