--- a/about.html
+++ b/about.html
@@ -17,16 +17,25 @@
             <!-- PAGE CONTENT BEGINS HERE -->
 
             <section id="about">
-                <h1 class="page-heading">about <span>jiggyflyjoe</span></h1>
-                <h2 class="subheading"><em>info and quick bio</em></h2>
-                <img class="photo" alt="Photo of jiggyflyjoe wearing a knit hat and glasses in front of his microphone." src="images/profilephoto.png">
-                <div class="navnew">
-                    <button type="button" onclick="location.href='index.html'"><i class="fa-solid fa-arrow-left"></i>&nbsp;&nbsp;<em>back</em></button>
+                <h1 class="page-heading fade-in">about <span>jiggyflyjoe</span></h1>
+                <h2 class="subheading fade-in"><em>info and quick bio</em></h2>
+                <img class="photo fade-in" alt="Photo of jiggyflyjoe wearing a knit hat and glasses in front of his microphone." src="images/profilephoto.png">
+                <div class="navnew fade-in">
+                    <button class="fade-in" type="button" onclick="location.href='index.html'"><i class="fa-solid fa-arrow-left"></i>&nbsp;&nbsp;<em>back</em></button>
                 </div>
-                <p class="about-info"><strong>jiggyflyjoe</strong>, or just <strong>Joe</strong>, is a tech-obsessed, introverted, diabetic, and “neurospicy” creative who swapped the city lights of Indianapolis for the quiet charm of rural Kansas—where the sunsets are gorgeous, but the internet speed is a humbling experience. A former Software Development and Visual Communications student turned coding and <strong>tech enthusiast</strong>, Joe spends his days deep-diving into software, web development, and gaming tech, always chasing that next great project.</p>
-                <p class="about-info">When he's not wrangling code, Joe wears many hats—gamer, writer, live-streamer, podcaster, photographer, and graphic artist. His <strong>Twitch streams</strong> are a cozy, welcoming escape from the chaos of the world, fostering community and connection through good vibes and great games. But his most devoted audience? His feline trio: <strong>Tigger</strong>, <strong>Rufus</strong>, and <strong>Cinnamon</strong>, who ensure he never codes too long without a mandatory cuddle (or an impromptu keyboard takeover).</p>
-                <p class="about-info">Looking ahead, Joe is focused on leveling up his skills, launching creative projects, and building toward a career that blends his love of <strong>tech, gaming, and storytelling</strong>. Whether he's crafting content, developing software, or just sharing a laugh online, his mission remains the same—bringing lights, creativity, and a sense of belonging to the digital world.</p>
+                <p class="about-info fade-in"><strong>jiggyflyjoe</strong>, or just <strong>Joe</strong>, is a tech-obsessed, introverted, diabetic, and “neurospicy” creative who swapped the city lights of Indianapolis for the quiet charm of rural Kansas—where the sunsets are gorgeous, but the internet speed is a humbling experience. A former Software Development and Visual Communications student turned coding and <strong>tech enthusiast</strong>, Joe spends his days deep-diving into software, web development, and gaming tech, always chasing that next great project.</p>
+                <p class="about-info fade-in">When he's not wrangling code, Joe wears many hats—gamer, writer, live-streamer, podcaster, photographer, and graphic artist. His <strong>Twitch streams</strong> are a cozy, welcoming escape from the chaos of the world, fostering community and connection through good vibes and great games. But his most devoted audience? His feline trio: <strong>Tigger</strong>, <strong>Rufus</strong>, and <strong>Cinnamon</strong>, who ensure he never codes too long without a mandatory cuddle (or an impromptu keyboard takeover).</p>
+                <p class="about-info fade-in">Looking ahead, Joe is focused on leveling up his skills, launching creative projects, and building toward a career that blends his love of <strong>tech, gaming, and storytelling</strong>. Whether he's crafting content, developing software, or just sharing a laugh online, his mission remains the same—bringing lights, creativity, and a sense of belonging to the digital world.</p>
             </section>
         </div>
+        
+        <!-- JAVASCRIPT ANIMATIONS -->
+
+      <script>
+        document.addEventListener("DOMContentLoaded", function () {
+          let elements = document.querySelectorAll(".fade-in");
+          elements.forEach(el => el.classList.add("visible"));
+        });
+        </script>
     </body>
 </html>
