--- a/content.html
+++ b/content.html
@@ -17,23 +17,32 @@
             <!-- PAGE CONTENT BEGINS HERE -->
 
             <section id="content">
-                <h1 class="page-heading">content by <span>jiggyflyjoe</span></h1>
-                <h2 class="subheading"><em>where to find his latest</em></h2>
+                <h1 class="page-heading fade-in">content by <span>jiggyflyjoe</span></h1>
+                <h2 class="subheading fade-in"><em>where to find his latest</em></h2>
                 <div class="navnew">
-                    <button type="button" onclick="location.href='index.html'"><i class="fa-solid fa-arrow-left"></i>&nbsp;&nbsp;back</button>
+                    <button class="fade-in" type="button" onclick="location.href='index.html'"><i class="fa-solid fa-arrow-left"></i>&nbsp;&nbsp;back</button>
                 </div>
-                <p class="content-info">While learning computer programming and web development at my own pace, I also make a few dollars here and there by creating online content via live streaming on my Twitch and YouTube channels, video creation and editing on YouTube and TikTok, and the plain old written word in my Ghost blog/email newsletter that I recently launched called <em>Jiggy's Journal</em>. You can find all of that content by clicking the corresponding options below!</p>
-                <p class="content-info"><strong>If you enjoy my work and would like to support it, please consider subscribing to me on those platforms!</strong></p>
+                <p class="content-info fade-in">While learning computer programming and web development at my own pace, I also make a few dollars here and there by creating online content via live streaming on my Twitch and YouTube channels, video creation and editing on YouTube and TikTok, and the plain old written word in my Ghost blog/email newsletter that I recently launched called <em>Jiggy's Journal</em>. You can find all of that content by clicking the corresponding options below!</p>
+                <p class="content-info fade-in"><strong>If you enjoy my work and would like to support it, please consider subscribing to me on those platforms!</strong></p>
                 <div class="info-container">
-                    <p class="infobox"><i class="fa-solid fa-circle-info"></i>&nbsp;&nbsp;You can optionally tip me or set up a recurring monthly gift on my Ko-fi page! Thank you so much for your generosity and consideration!</p>
+                    <p class="infobox fade-in"><i class="fa-solid fa-circle-info"></i>&nbsp;&nbsp;You can optionally tip me or set up a recurring monthly gift on my Ko-fi page! Thank you so much for your generosity and consideration!</p>
                 </div>
-                <div class="content-buttons">
-                    <a href="https://journal.jiggyflyjoe.com" target="_blank"><img src="https://img.shields.io/badge/Jiggy's Journal-15171A?logo=ghost&logoColor=fff&style=for-the-badge" alt="Jiggy's Journal blog/email publication"></a> <a href="https://twitch.tv/jiggyflyjoe" target="_blank"><img src="https://img.shields.io/badge/Twitch-9146FF?logo=twitch&logoColor=fff&style=for-the-badge" alt="Twitch Channel"></a> <a href="https://youtube.com/@jiggyflyjoe" target="_blank"><img src="https://img.shields.io/badge/YouTube-F00?logo=youtube&logoColor=fff&style=for-the-badge" alt="YouTube Channel"></a> <a href="https://tiktok.com/@jiggyflyjoe" target="_blank"><img src="https://img.shields.io/badge/TikTok-000?logo=tiktok&logoColor=fff&style=for-the-badge" alt="TikTok Channel"></a>
+                <div class="content-buttons fade-in">
+                    <a href="https://journal.jiggyflyjoe.com" target="_blank"><img class="socialbtn" src="https://img.shields.io/badge/Jiggy's Journal-15171A?logo=ghost&logoColor=fff&style=for-the-badge" alt="Jiggy's Journal blog/email publication"></a> <a href="https://twitch.tv/jiggyflyjoe" target="_blank"><img class="socialbtn" src="https://img.shields.io/badge/Twitch-9146FF?logo=twitch&logoColor=fff&style=for-the-badge" alt="Twitch Channel"></a> <a href="https://youtube.com/@jiggyflyjoe" target="_blank"><img class="socialbtn" src="https://img.shields.io/badge/YouTube-F00?logo=youtube&logoColor=fff&style=for-the-badge" alt="YouTube Channel"></a> <a href="https://tiktok.com/@jiggyflyjoe" target="_blank"><img class="socialbtn" src="https://img.shields.io/badge/TikTok-000?logo=tiktok&logoColor=fff&style=for-the-badge" alt="TikTok Channel"></a>
                 </div>
-                <div class="kofi-button">
-                    <a href="https://ko-fi.com/jiggyflyjoe" target="_blank"><img src="https://img.shields.io/badge/Ko--fi-FF6433?logo=kofi&logoColor=fff&style=for-the-badge" alt="Ko-fi Page"></a>
+                <div class="kofi-button fade-in">
+                    <a href="https://ko-fi.com/jiggyflyjoe" target="_blank"><img class="socialbtn" src="https://img.shields.io/badge/Ko--fi-FF6433?logo=kofi&logoColor=fff&style=for-the-badge" alt="Ko-fi Page"></a>
                 </div>
             </section>
         </div>
+                
+        <!-- JAVASCRIPT ANIMATIONS -->
+
+      <script>
+        document.addEventListener("DOMContentLoaded", function () {
+          let elements = document.querySelectorAll(".fade-in");
+          elements.forEach(el => el.classList.add("visible"));
+        });
+        </script>
     </body>
 </html>
