--- a/content.html
+++ b/content.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!-- GOOGLE ANALYTICS TAGGING -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-JEBGEMJGXS"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-JEBGEMJGXS');
+        </script>
+        <!-- NORMAL HTML BOILERPLATE STUFF -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>JIGGYFLYJOE's Content</title>
