Add favicon and buttons to blog and forum

--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-        <!-- GOOGLE ANALYTICS TAGGING -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-JEBGEMJGXS"></script>
-        <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
+    <!-- GOOGLE ANALYTICS TAGGING -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JEBGEMJGXS"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
     
-        gtag('config', 'G-JEBGEMJGXS');
-        </script>
-        <!-- NORMAL HTML BOILERPLATE STUFF -->
+    gtag('config', 'G-JEBGEMJGXS');
+    </script>
+
+    <!-- NORMAL HTML BOILERPLATE STUFF -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JIGGYFLYJOE.COM</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.png">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.5.2/css/all.css">
   </head>
+
   <body><div id="content-container">
     
     <!-- WELCOME/SPLASH PAGE -->
@@ -31,6 +34,8 @@
       <div class="navnew"><button class="fade-in" type="button" onclick="location.href='about.html'"><em>about</em>&nbsp;&nbsp;<i class="fa-solid fa-arrow-right"></i></button>
       <button class="fade-in" type="button" onclick="location.href='content.html'"><em>content</em>&nbsp;&nbsp;<i class="fa-solid fa-arrow-right"></i></button>
       <button class="fade-in" type="button" onclick="location.href='connect.html'"><em>connect</em>&nbsp;&nbsp;<i class="fa-solid fa-arrow-right"></i></button>
+      </div>
+      <div class="navnew"><button class="fade-in" type="button" onclick="location.href='https://journal.jiggyflyjoe.com'"><em>journal</em>&nbsp;&nbsp;<i class="fa-solid fa-arrow-right"></i></button> <button class="fade-in" type="button" onclick="location.href='https://chat.jiggyflyjoe.com'"><em>chat</em>&nbsp;&nbsp;<i class="fa-solid fa-arrow-right"></i></button>
       </div>
     </header>
 
