--- a/content.html
+++ b/content.html
@@ -28,7 +28,7 @@
             <!-- PAGE CONTENT BEGINS HERE -->
 
             <section id="content">
-                <h1 class="page-heading fade-in">content by <span>jiggyflyjoe</span></h1>
+                <h1 class="page-heading fade-in">content by <span class="name">jiggyflyjoe</span></h1>
                 <h2 class="subheading fade-in"><em>where to find his latest</em></h2>
                 <div class="navnew">
                     <button class="fade-in" type="button" onclick="location.href='index.html'"><i class="fa-solid fa-arrow-left"></i>&nbsp;&nbsp;back</button>
