Fix page headers

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
             <!-- PAGE CONTENT BEGINS HERE -->
 
             <section id="about">
-                <h1 class="page-heading fade-in">about <span>jiggyflyjoe</span></h1>
+                <h1 class="page-heading fade-in">about <span class="name">jiggyflyjoe</span></h1>
                 <h2 class="subheading fade-in"><em>info and quick bio</em></h2>
                 <img class="photo fade-in" alt="Photo of jiggyflyjoe wearing a knit hat and glasses in front of his microphone." src="images/profilephoto.png">
                 <div class="navnew fade-in">
