--- a/connect.html
+++ b/connect.html
@@ -28,7 +28,7 @@
             <!-- PAGE CONTENT BEGINS HERE -->
 
             <section id="connect">
-                <h1 class="page-heading fade-in">connect with <span>jiggyflyjoe</span></h1>
+                <h1 class="page-heading fade-in">connect with <span class="name">jiggyflyjoe</span></h1>
                 <h2 class="subheading fade-in"><em>reach out or hang out</em></h2>
                 <div class="navnew">
                     <button class="fade-in" type="button" onclick="location.href='index.html'"><i class="fa-solid fa-arrow-left"></i>&nbsp;&nbsp;back</button>
