Flesh out contact/connect pages; Mastodon verification

--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.5.2/css/all.css">
+        <link rel="me" href="https://social.vivaldi.net/@jiggyflyjoe">
     </head>
 
     <body>
@@ -39,6 +40,14 @@
                 <p class="about-info fade-in">Looking ahead, Joe is focused on leveling up his skills, launching creative projects, and building toward a career that blends his love of <strong>tech, gaming, and storytelling</strong>. Whether he's crafting content, developing software, or just sharing a laugh online, his mission remains the same—bringing lights, creativity, and a sense of belonging to the digital world.</p>
             </section>
         </div>
+
+        <!-- FOOTER -->
+      
+        <footer id="footer fade-in">
+        <p class="footer-text fade-in">Made with <i class="fa-solid fa-heart" style="color:red;"></i> by jiggyflyjoe.</p>
+        <p class="footer-text fade-in">Page design is based off of an original certification project completed for <a href="https://freecodecamp.org" target="_blank" id="fcc">freeCodeCamp<i class="fab fa-free-code-camp"></i></a>.</p>
+        </footer>
+          </div>
         
         <!-- JAVASCRIPT ANIMATIONS -->
 
