--- a/connect.html
+++ b/connect.html
@@ -20,6 +20,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.5.2/css/all.css">
+        <link rel="me" href="https://social.vivaldi.net/@jiggyflyjoe">
     </head>
 
     <body>
@@ -34,13 +35,30 @@
                     <button class="fade-in" type="button" onclick="location.href='index.html'"><i class="fa-solid fa-arrow-left"></i>&nbsp;&nbsp;back</button>
                 </div>
                 <p class="connect-info fade-in">Feel free to reach out, contact, follow, or subscribe to <strong>any and all</strong> of the following digital platforms. I love making new friends, colleagues, collaborators, and even gaming pals!</p>
-                <p class="connect-info fade-in">Due to extremely worrying policy changes, the proliferation of misinformation, and leadership that no longer aligns with my values, I am no longer on X (formerly Twitter), Substack, or any Meta platform such as Facebook, Instagram, Threads, or WhatsApp.</p>
-                <div class="content-buttons fade-in">
-                    <a href="https://bsky.app/profile/jiggyflyjoe.com" target="_blank"><img class="socialbtn" src="https://img.shields.io/badge/Bluesky-0285FF?logo=bluesky&logoColor=fff&style=for-the-badge" alt="Bluesky"></a> <a href="https://social.vivaldi.net/@jiggyflyjoe" target="_blank"><img class="socialbtn" src="https://img.shields.io/badge/Mastodon-6364FF?logo=mastodon&logoColor=fff&style=for-the-badge" alt="Mastodon"></a> <a href="https://pixelfed.social/jiggyflyjoe" target="_blank"><img class="socialbtn" src="https://img.shields.io/badge/Pixelfed-6366F1?logo=pixelfed&logoColor=fff&style=for-the-badge" alt="Pixelfed"></a> <a href="https://journal.jiggyflyjoe.com" target="_blank"><img class="socialbtn" src="https://img.shields.io/badge/Ghost-15171A?logo=ghost&logoColor=fff&style=for-the-badge" alt="Ghost"></a> <a href="https://twitch.tv/jiggyflyjoe" target="_blank"><img class="socialbtn" src="https://img.shields.io/badge/Twitch-9146FF?logo=twitch&logoColor=fff&style=for-the-badge" alt="Twitch"></a> <a href="https://youtube.com/@jiggyflyjoe" target="_blank"><img class="socialbtn" src="https://img.shields.io/badge/YouTube-F00?logo=youtube&logoColor=fff&style=for-the-badge" alt="YouTube"></a> <a href="https://tiktok.com/@jiggyflyjoe" target="_blank"><img class="socialbtn" src="https://img.shields.io/badge/TikTok-000?logo=tiktok&logoColor=fff&style=for-the-badge" alt="TikTok"></a> <a href="https://discord.gg/Qfp3mw5" target="_blank"><img class="socialbtn" src="https://img.shields.io/badge/Discord-5865F2?logo=discord&logoColor=fff&style=for-the-badge" alt="Discord"></a> <a href="https://signal.me/#eu/6TWl8DL-_tkwXyISflxVrXKL539lKACSYrYTnckAmsD95mFTZ2xIdb5Ucl2mCz8U" target="_blank"><img class="socialbtn" src="https://img.shields.io/badge/Signal-3B45FD?logo=signal&logoColor=fff&style=for-the-badge" alt="Signal"></a> <a href="https://github.com/jiggyflyjoe" target="_blank"><img class="socialbtn" src="https://img.shields.io/badge/GitHub-181717?logo=github&logoColor=fff&style=for-the-badge" alt="GitHub"></a> <a href="https://ko-fi.com/jiggyflyjoe" target="_blank"><img class="socialbtn" src="https://img.shields.io/badge/Ko--fi-FF6433?logo=kofi&logoColor=fff&style=for-the-badge" alt="Ko-fi"></a> <a href="mailto:joe@jiggyflyjoe.com" target="_blank"><img class="socialbtn" src="https://img.shields.io/badge/Email-EA4335?logo=gmail&logoColor=fff&style=for-the-badge" alt="Gmail"></a>
-                </div>
+                <h2 class="fade-in">hailing frequencies</h2>
+                <h2 class="subheading fade-in">direct contact to <span class="name fade-in">jiggyflyjoe</span></h2>
+                <p class="connect-info fade-in">Interested in just contacting me directly? There's a couple different ways to do just that, depending on your personal preferences!</p>
+                <p class="connect-info fade-in">If you prefer direct and occasionally instant messaging access, you can reach me on the secure, end-to-end encrypted messenger app <a href="https://signal.me/#eu/6TWl8DL-_tkwXyISflxVrXKL539lKACSYrYTnckAmsD95mFTZ2xIdb5Ucl2mCz8U" target="_blank"><strong>Signal</strong> <i class="fa-regular fa-comment"></i></a>. If you're a little more old school, and don't necessarily need an instant response, you're welcome to send the ol' tried and true email to my inbox at <a href="mailto:joe@jiggyflyjoe.com" target="_blank"><strong>joe@jiggyflyjoe.com</strong> <i class="fa-solid fa-envelope"></i></a>.</p>
+                <h2 class="fade-in">social platforms</h2>
+                <h2 class="subheading fade-in">keep up with <span class="name fade-in">jiggyflyjoe</span></h2>
+                <p class="connect-info fade-in">For a <em>wide variety</em> of reasons (which you can <a href="https://journal.jiggyflyjoe.com/ditching-the-algorithm-my-move-to-better-social-media/" target="_blank">read about here!</a>), I am no longer active on <em>any</em> Meta platform (Facebook, Instagram, etc.), X (formerly Twitter), or Substack.</p>
+                <p class="connect-info fade-in"><a href="https://bsky.app/profile/jiggyflyjoe.com" target="_blank"><strong>Bluesky</strong> <i class="fa-brands fa-bluesky"></i></a> and <a href="https://social.vivaldi.net/@jiggyflyjoe" target="_blank"><strong>Mastodon</strong> <i class="fa-brands fa-mastodon"></i></a> are the newer and “decentralized” micro-blogging platforms that I'm currently using similar to X/Twitter or Meta's Threads. I generally cross-post to both unless one or the other is a “re-post” or there's just something wrong with media (file's too big or small to be uploaded, etc.), so feel free to follow on either or both!</p>
+                <p class="connect-info fade-in">My decentralized alternative to the Meta-owned Instagram is the wonderful platform <a href="https://pixelfed.social/jiggyflyjoe" target="_blank"><strong>Pixelfed</strong> <i class="fa-solid fa-camera-retro"></i></a>! Give it a look and tell me the experience doesn't look almost <em>identical</em> to the one you get from Instagram!</p>
+                <h2 class="fade-in">join the community</h2>
+                <h2 class="subheading fade-in">connect with <span class="name fade-in">jiggyflyjoe</span></h2>
+                <p class="connect-info fade-in">I think someone just entered the group chat, and I think that someone is you! Want to join the JIGGAWATT community, where we hang out, chat, and share all manner of things in our free time? Be sure to either join our <a href="https://discord.gg/Qfp3mw5" target="_blank"><strong>Discord</strong> <i class="fa-brands fa-discord"></i></a> community. I've also launched a brand new message board forum to serve as a web extension of the JIGGAWATT called <a href="https://chat.jiggyflyjoe.com" target="_blank"><strong>Jiggy's Chat</strong> <i class="fa-solid fa-thumbtack"></i></a>. Join us and become <em>one of us...</em></p>
+                <h2 class="fade-in">content hubs</h2>
+                <h2 class="subheading fade-in"><em>visit <a class="sub-link" href="content.html" target="_blank">content</a> for more</em></h2>
             </section>
         </div>
                 
+        <!-- FOOTER -->
+      
+        <footer id="footer fade-in">
+        <p class="footer-text fade-in">Made with <i class="fa-solid fa-heart" style="color:red;"></i> by jiggyflyjoe.</p>
+        <p class="footer-text fade-in">Page design is based off of an original certification project completed for <a href="https://freecodecamp.org" target="_blank" id="fcc">freeCodeCamp<i class="fab fa-free-code-camp"></i></a>.</p>
+        </footer>
+
         <!-- JAVASCRIPT ANIMATIONS -->
 
       <script>
