--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.5.2/css/all.css">
+    <link rel="me" href="https://social.vivaldi.net/@jiggyflyjoe">
   </head>
 
   <body><div id="content-container">
@@ -37,8 +38,10 @@
       </div>
       <div class="navnew"><button class="fade-in" type="button" onclick="location.href='https://journal.jiggyflyjoe.com'"><em>journal</em>&nbsp;&nbsp;<i class="fa-solid fa-arrow-right"></i></button> <button class="fade-in" type="button" onclick="location.href='https://chat.jiggyflyjoe.com'"><em>chat</em>&nbsp;&nbsp;<i class="fa-solid fa-arrow-right"></i></button><br><br>
         <div class="navnew fade-in">
-          <p class="social-icons fade-in"><a href="https://bsky.app/profile/jiggyflyjoe.com" target="_blank"><i id="fa" class="fa-brands fa-bluesky"></i></a> <a href="https://social.vivaldi.net/@jiggyflyjoe" target="_blank"><i id="fa" class="fa-brands fa-mastodon"></i></a> <a href="https://pixelfed.social/jiggyflyjoe" target="_blank"><i id="fa" class="fa-solid fa-camera-retro"></i></a> <a href="https://journal.jiggyflyjoe.com/" target="_blank"><i id="fa" class="fa-solid fa-blog"></i></a> <a href="https://chat.jiggyflyjoe.com/" target="_blank"><i id="fa" class="fa-solid fa-thumbtack"></i></a> <a href="https://twitch.tv/jiggyflyjoe" target="_blank"><i id="fa" class="fa-brands fa-twitch"></i></a> <a href="https://youtube.com/@jiggyflyjoe" target="_blank"><i id="fa" class="fa-brands fa-youtube"></i></a> <a href="https://tiktok.com/@jiggyflyjoe" target="_blank"><i id="fa" class="fa-brands fa-tiktok"></i></a> <a href="https://discord.gg/Qfp3mw5" target="_blank"><i id="fa" class="fa-brands fa-discord"></i></a> <a href="https://signal.me/#eu/6TWl8DL-_tkwXyISflxVrXKL539lKACSYrYTnckAmsD95mFTZ2xIdb5Ucl2mCz8U" target="_blank"><i id="fa" class="fa-regular fa-message"></i></a> <a href="https://github.com/jiggyflyjoe" target="_blank"><i id="fa" class="fa-brands fa-github"></i></a> <a href="https://ko-fi.com/jiggyflyjoe" target="_blank"><i id="fa" class="fa-solid fa-mug-saucer"></i></a> <a href="mailto:joe@jiggyflyjoe.com" target="_blank"><i id="fa" class="fa-solid fa-at"></i></a></p>
-          <p class="note fade-in">visit the <strong><a href="connect.html">connect page</a></strong> for more on how to contact me!</p>
+          <p class="social-icons fade-in"><a href="https://bsky.app/profile/jiggyflyjoe.com" target="_blank"><i id="fa" class="fa-brands fa-bluesky"></i></a> <a href="https://social.vivaldi.net/@jiggyflyjoe" target="_blank"><i id="fa" class="fa-brands fa-mastodon"></i></a> <a href="https://pixelfed.social/jiggyflyjoe" target="_blank"><i id="fa" class="fa-solid fa-camera-retro"></i></a> <a href="https://journal.jiggyflyjoe.com/" target="_blank"><i id="fa" class="fa-solid fa-blog"></i></a> <a href="https://chat.jiggyflyjoe.com/" target="_blank"><i id="fa" class="fa-solid fa-thumbtack"></i></a> <a href="https://twitch.tv/jiggyflyjoe" target="_blank"><i id="fa" class="fa-brands fa-twitch"></i></a> <a href="https://youtube.com/@jiggyflyjoe" target="_blank"><i id="fa" class="fa-brands fa-youtube"></i></a> <a href="https://tiktok.com/@jiggyflyjoe" target="_blank"><i id="fa" class="fa-brands fa-tiktok"></i></a> <a href="https://discord.gg/Qfp3mw5" target="_blank"><i id="fa" class="fa-brands fa-discord"></i></a> <a href="https://signal.me/#eu/6TWl8DL-_tkwXyISflxVrXKL539lKACSYrYTnckAmsD95mFTZ2xIdb5Ucl2mCz8U" target="_blank"><i class="fa-regular fa-comment"></i></a> <a href="https://github.com/jiggyflyjoe" target="_blank"><i id="fa" class="fa-brands fa-github"></i></a> <a href="https://ko-fi.com/jiggyflyjoe" target="_blank"><i id="fa" class="fa-solid fa-mug-saucer"></i></a></p>
+          <p class="note fade-in"><a href="mailto:joe@jiggyflyjoe.com" target="_blank"><strong>joe@jiggyflyjoe.com</strong></a><br><br>
+          <em>Subscribe to my newsletter publication!</em><br>
+          <div class="sign-up fade-in" style="min-height: 58px;max-width: 440px;margin: 0 auto;width: 100%"><script src="https://cdn.jsdelivr.net/ghost/signup-form@~0.2/umd/signup-form.min.js" data-label-1="jiggyflyjoe.com" data-button-color="#d5003d" data-button-text-color="#FFFFFF" data-site="https://journal.jiggyflyjoe.com/" data-locale="en" async></script></div></p>
         </div>
       </div>
     </header>
@@ -49,7 +52,6 @@
     <p class="footer-text fade-in">Made with <i class="fa-solid fa-heart" style="color:red;"></i> by jiggyflyjoe.</p>
     <p class="footer-text fade-in">Page design is based off of an original certification project completed for <a href="https://freecodecamp.org" target="_blank" id="fcc">freeCodeCamp<i class="fab fa-free-code-camp"></i></a>.</p>
     </footer>
-      </div>
     
       <!-- JAVASCRIPT ANIMATIONS -->
 
