--- a/content.html
+++ b/content.html
@@ -20,6 +20,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.5.2/css/all.css">
+        <link rel="me" href="https://social.vivaldi.net/@jiggyflyjoe">
     </head>
 
     <body>
@@ -33,17 +34,19 @@
                 <div class="navnew">
                     <button class="fade-in" type="button" onclick="location.href='index.html'"><i class="fa-solid fa-arrow-left"></i>&nbsp;&nbsp;back</button>
                 </div>
-                <p class="content-info fade-in">While learning computer programming and web development at my own pace, I also make a few dollars here and there by creating online content via live streaming on my Twitch and YouTube channels, video creation and editing on YouTube and TikTok, and the plain old written word in my Ghost blog/email newsletter that I recently launched called <em>Jiggy's Journal</em>. You can find all of that content by clicking the corresponding options below!</p>
-                <p class="content-info fade-in"><strong>If you enjoy my work and would like to support it, please consider subscribing to me on those platforms!</strong></p>
-                <p class="note fade-in">You can optionally tip me or set up a recurring monthly gift on my <strong><a href="https://ko-fi.com/jiggyflyjoe" target="_blank">Ko-fi page</a></strong>! Thank you so much for your generosity and consideration!</p>
-                <div class="content-buttons fade-in">
-                    <a href="https://journal.jiggyflyjoe.com" target="_blank"><img class="socialbtn" src="https://img.shields.io/badge/Jiggy's Journal-15171A?logo=ghost&logoColor=fff&style=for-the-badge" alt="Jiggy's Journal blog/email publication"></a> <a href="https://twitch.tv/jiggyflyjoe" target="_blank"><img class="socialbtn" src="https://img.shields.io/badge/Twitch-9146FF?logo=twitch&logoColor=fff&style=for-the-badge" alt="Twitch Channel"></a> <a href="https://youtube.com/@jiggyflyjoe" target="_blank"><img class="socialbtn" src="https://img.shields.io/badge/YouTube-F00?logo=youtube&logoColor=fff&style=for-the-badge" alt="YouTube Channel"></a> <a href="https://tiktok.com/@jiggyflyjoe" target="_blank"><img class="socialbtn" src="https://img.shields.io/badge/TikTok-000?logo=tiktok&logoColor=fff&style=for-the-badge" alt="TikTok Channel"></a>
-                </div>
-                <div class="kofi-button fade-in">
-                    <a href="https://ko-fi.com/jiggyflyjoe" target="_blank"><img class="socialbtn" src="https://img.shields.io/badge/Ko--fi-FF6433?logo=kofi&logoColor=fff&style=for-the-badge" alt="Ko-fi Page"></a>
-                </div>
+                <p class="content-info fade-in">As I continue pursuing my computer programming and web development education online, I also make a few dollars here and there with content creation. This includes my blog and email newsletter publication <a href="https://journal.jiggyflyjoe.com" target="_blank"><strong><em>Jiggy's Journal</em></strong> <i class="fa-solid fa-blog"></i></a>, which you can currently subscribe to for free!</p>
+                <p class="content-info fade-in">I also occasionally stream live to both my <a href="https://twitch.tv/jiggyflyjoe" target="_blank"><strong>Twitch</strong> <i class="fa-brands fa-twitch"></i></a> and <a href="https://youtube.com/@jiggyflyjoe" target="_blank"><strong>YouTube</strong> <i class="fa-brands fa-youtube"></i></a> channels. Clips from these streams along with other original short video content can be found on <a href="https://tiktok.com/@jiggyflyjoe" target="_blank"><strong>TikTok</strong> <i class="fa-brands fa-tiktok"></i></a>.</p>
+                <p class="content-info fade-in">Lastly, any coding or development projects that I throw together can be found over on my <a href="https://github.com/jiggyflyjoe" target="_blank"><strong>GitHub</strong> <i class="fa-brands fa-github"></i></a> profile.</p>
+                <p class="content-info fade-in"><strong>If you enjoy my work and would like to support it, please consider subscribing to my content on those platforms!</strong> <em>You can optionally tip me or set up a recurring monthly gift over on my <a href="https://ko-fi.com/jiggyflyjoe" target="_blank"><strong>Ko-fi</strong> <i class="fa-solid fa-mug-saucer"></i></a> page.</em></p>
             </section>
         </div>
+
+        <!-- FOOTER -->
+      
+        <footer id="footer fade-in">
+        <p class="footer-text fade-in">Made with <i class="fa-solid fa-heart" style="color:red;"></i> by jiggyflyjoe.</p>
+        <p class="footer-text fade-in">Page design is based off of an original certification project completed for <a href="https://freecodecamp.org" target="_blank" id="fcc">freeCodeCamp<i class="fab fa-free-code-camp"></i></a>.</p>
+        </footer>
                 
         <!-- JAVASCRIPT ANIMATIONS -->
 
