Rewrite bio and minor fixes

--- a/content.html
+++ b/content.html
@@ -47,6 +47,7 @@
         <p class="footer-text fade-in">Made with <i class="fa-solid fa-heart" style="color:red;"></i> by jiggyflyjoe.</p>
         <p class="footer-text fade-in">Page design is based off of an original certification project completed for <a href="https://freecodecamp.org" target="_blank" id="fcc">freeCodeCamp<i class="fab fa-free-code-camp"></i></a>.</p>
         </footer>
+    </div>
                 
         <!-- JAVASCRIPT ANIMATIONS -->
 
