--- a/connect.html
+++ b/connect.html
@@ -46,9 +46,10 @@
                 <p class="connect-info fade-in">My decentralized alternative to the Meta-owned Instagram is the wonderful platform <a href="https://pixelfed.social/jiggyflyjoe" target="_blank"><strong>Pixelfed</strong> <i class="fa-solid fa-camera-retro"></i></a>! Give it a look and tell me the experience doesn't look almost <em>identical</em> to the one you get from Instagram!</p>
                 <h2 class="fade-in">join the community</h2>
                 <h2 class="subheading fade-in">connect with <span class="name fade-in">jiggyflyjoe</span></h2>
-                <p class="connect-info fade-in">I think someone just entered the group chat, and I think that someone is you! Want to join the JIGGAWATT community, where we hang out, chat, and share all manner of things in our free time? Be sure to either join our <a href="https://discord.gg/Qfp3mw5" target="_blank"><strong>Discord</strong> <i class="fa-brands fa-discord"></i></a> community. I've also launched a brand new message board forum to serve as a web extension of the JIGGAWATT called <a href="https://chat.jiggyflyjoe.com" target="_blank"><strong>Jiggy's Chat</strong> <i class="fa-solid fa-thumbtack"></i></a>. Join us and become <em>one of us...</em></p>
+                <p class="connect-info fade-in">You've just entered the group chat! Want to join the JIGGAWATT community, where we hang out, chat, and share all manner of things in our free time? Be sure to join our <a href="https://discord.gg/Qfp3mw5" target="_blank"><strong>Discord</strong> <i class="fa-brands fa-discord"></i></a> community! I've also recently launched a brand new message board forum to serve as a web extension of the JIGGAWATT called <a href="https://chat.jiggyflyjoe.com" target="_blank"><strong>Jiggy's Chat</strong> <i class="fa-solid fa-thumbtack"></i></a>. Join us and become <em>one of us...</em></p>
                 <h2 class="fade-in">content hubs</h2>
-                <h2 class="subheading fade-in"><em>visit <a class="sub-link" href="content.html" target="_blank">content</a> for more</em></h2>
+                <h2 class="subheading fade-in"><em>check out content by <span class="name fade-in">jiggyflyjoe</em></span></h2>\
+                <p class="connect-info fade-in">If you're interested in what I'm busy creating lately, head on over to the <strong><a href="content.html">content page</a></strong>!</p>
             </section>
         </div>
                 
@@ -58,6 +59,7 @@
         <p class="footer-text fade-in">Made with <i class="fa-solid fa-heart" style="color:red;"></i> by jiggyflyjoe.</p>
         <p class="footer-text fade-in">Page design is based off of an original certification project completed for <a href="https://freecodecamp.org" target="_blank" id="fcc">freeCodeCamp<i class="fab fa-free-code-camp"></i></a>.</p>
         </footer>
+    </div>
 
         <!-- JAVASCRIPT ANIMATIONS -->
 
