Another minor HTML fix

--- a/connect.html
+++ b/connect.html
@@ -48,7 +48,7 @@
                 <h2 class="subheading fade-in">connect with <span class="name fade-in">jiggyflyjoe</span></h2>
                 <p class="connect-info fade-in">You've just entered the group chat! Want to join the JIGGAWATT community, where we hang out, chat, and share all manner of things in our free time? Be sure to join our <a href="https://discord.gg/Qfp3mw5" target="_blank"><strong>Discord</strong> <i class="fa-brands fa-discord"></i></a> community! I've also recently launched a brand new message board forum to serve as a web extension of the JIGGAWATT called <a href="https://chat.jiggyflyjoe.com" target="_blank"><strong>Jiggy's Chat</strong> <i class="fa-solid fa-thumbtack"></i></a>. Join us and become <em>one of us...</em></p>
                 <h2 class="fade-in">content hubs</h2>
-                <h2 class="subheading fade-in"><em>check out content by <span class="name fade-in">jiggyflyjoe</em></span></h2>\
+                <h2 class="subheading fade-in"><em>check out content by <span class="name fade-in">jiggyflyjoe</span></em></h2>
                 <p class="connect-info fade-in">If you're interested in what I'm busy creating lately, head on over to the <strong><a href="content.html">content page</a></strong>!</p>
             </section>
         </div>
