Issuing multiple fixes.

--- a/about.html
+++ b/about.html
@@ -24,11 +24,11 @@
     </head>
 
     <body>
-        <div id="content-container">
+        <div class="content-container">
 
             <!-- PAGE CONTENT BEGINS HERE -->
 
-            <section id="about">
+            <section class="about-page">
                 <h1 class="page-heading fade-in">about <span class="name">jiggyflyjoe</span></h1>
                 <h2 class="subheading fade-in"><em>info and quick bio</em></h2>
                 <img class="photo fade-in" alt="Photo of jiggyflyjoe wearing a knit hat and glasses in front of his microphone." src="images/profilephoto.png">
@@ -39,11 +39,11 @@
                 <p class="about-info fade-in">When he's not wrestling with JavaScript or leveling up his coding chops or obsessing over the latest gaming gear, Joe can be found streaming live on his <strong>Twitch and YouTube channels</strong>, where he hosts chill, cozy sessions where good vibes, engaging gameplay, and a welcoming atmosphere take center stage. Whether he's battling bosses or chatting with viewers, his streams are all about connection, comfort, and fun. His cats—<strong>Tigger</strong>, <strong>Rufus</strong>, and <strong>Cinnamon</strong>—often make surprise cameos, ensuring he never gets <em>too</em> focused without a break (or a paw on the keyboard).</p>
                 <p class="about-info fade-in">Joe also writes <strong><em>Jiggy's Journal</em></strong>, a quirky, heartfelt publication where he shares thoughts on tech, gaming, lifestyle, digital creativity, and personal adventures—sometimes serious, sometimes silly, but always real. Looking ahead, he's focused on leveling up his skills, launching fresh projects, and (hopefully) carving out a career that brings together his love of <strong>technology, storytelling, and online community-building</strong>.</p>
             </section>
-        </div>
+        </div><br><br><br>
 
         <!-- FOOTER -->
       
-        <footer id="footer fade-in">
+        <footer class="footer fade-in">
         <p class="footer-text fade-in">Made with <i class="fa-solid fa-heart" style="color:red;"></i> by jiggyflyjoe.</p>
         <p class="footer-text fade-in">Page design is based off of an original certification project completed for <a href="https://freecodecamp.org" target="_blank" id="fcc">freeCodeCamp<i class="fab fa-free-code-camp"></i></a>.</p>
         </footer>
