--- a/connect.html
+++ b/connect.html
@@ -24,15 +24,15 @@
     </head>
 
     <body>
-        <div id="content-container">
+        <div class="content-container">
 
             <!-- PAGE CONTENT BEGINS HERE -->
 
-            <section id="connect">
+            <section class="connect-page">
                 <h1 class="page-heading fade-in">connect with <span class="name">jiggyflyjoe</span></h1>
                 <h2 class="subheading fade-in"><em>reach out or hang out</em></h2>
                 <div class="navnew">
-                    <button class="fade-in" type="button" onclick="location.href='index.html'"><i class="fa-solid fa-arrow-left"></i>&nbsp;&nbsp;back</button>
+                    <button class="fade-in" type="button" onclick="location.href='index.html'"><i class="fa-solid fa-arrow-left"></i>&nbsp;&nbsp;<em>back</em></button>
                 </div>
                 <p class="connect-info fade-in">Feel free to reach out, contact, follow, or subscribe to <strong>any and all</strong> of the following digital platforms. I love making new friends, colleagues, collaborators, and even gaming pals!</p>
                 <h2 class="fade-in">hailing frequencies</h2>
@@ -50,12 +50,11 @@
                 <h2 class="fade-in">content hubs</h2>
                 <h2 class="subheading fade-in"><em>check out content by <span class="name fade-in">jiggyflyjoe</span></em></h2>
                 <p class="connect-info fade-in">If you're interested in what I'm busy creating lately, head on over to the <strong><a href="content.html">content page</a></strong>!</p>
-            </section>
-        </div>
+            </section><br><br><br>
                 
         <!-- FOOTER -->
       
-        <footer id="footer fade-in">
+        <footer class="footer fade-in">
         <p class="footer-text fade-in">Made with <i class="fa-solid fa-heart" style="color:red;"></i> by jiggyflyjoe.</p>
         <p class="footer-text fade-in">Page design is based off of an original certification project completed for <a href="https://freecodecamp.org" target="_blank" id="fcc">freeCodeCamp<i class="fab fa-free-code-camp"></i></a>.</p>
         </footer>
