--- a/connect.html
+++ b/connect.html
@@ -34,22 +34,39 @@
                 <div class="navnew">
                     <button class="fade-in" type="button" onclick="location.href='index.html'"><i class="fa-solid fa-arrow-left"></i>&nbsp;&nbsp;<em>back</em></button>
                 </div>
-                <p class="connect-info fade-in">Feel free to reach out, contact, follow, or subscribe to <strong>any and all</strong> of the following digital platforms. I love making new friends, colleagues, collaborators, and even gaming pals!</p>
+                <p class="connect-info fade-in">Feel free to reach out, contact, follow, or subscribe to <strong>any and all</strong> of the following digital platforms. I love making new friends, colleagues, gaming pals, and even folks to collaborate on projects with!</p>
+
                 <h2 class="fade-in">hailing frequencies</h2>
                 <h2 class="subheading fade-in">direct contact to <span class="name fade-in">jiggyflyjoe</span></h2>
-                <p class="connect-info fade-in">Interested in just contacting me directly? There's a couple different ways to do just that, depending on your personal preferences!</p>
-                <p class="connect-info fade-in">If you prefer direct and occasionally instant messaging access, you can reach me on the secure, end-to-end encrypted messenger app <a href="https://signal.me/#eu/6TWl8DL-_tkwXyISflxVrXKL539lKACSYrYTnckAmsD95mFTZ2xIdb5Ucl2mCz8U" target="_blank"><strong>Signal</strong> <i class="fa-regular fa-comment"></i></a>. If you're a little more old school, and don't necessarily need an instant response, you're welcome to send the ol' tried and true email to my inbox at <a href="mailto:joe@jiggyflyjoe.com" target="_blank"><strong>joe@jiggyflyjoe.com</strong> <i class="fa-solid fa-envelope"></i></a>.</p>
+                <p class="connect-info fade-in">Contact me directly by either shooting an email to my inbox or we can chat securely on Signal, an end-to-end encrypted messaging service!</p>
+                <div class="navnew">
+                    <button class="fade-in" type="button" onclick="location.href='mailto:joe@jiggyflyjoe.com'">send me an email&nbsp;&nbsp;<i class="fa-solid fa-envelope"></i></button><br>
+                    <button class="fade-in" type="button" onclick="location.href='https://signal.me/#eu/6TWl8DL-_tkwXyISflxVrXKL539lKACSYrYTnckAmsD95mFTZ2xIdb5Ucl2mCz8U'">message me on signal&nbsp;&nbsp;<i class="fa-solid fa-comment"></i></button>
+                </div>
+
                 <h2 class="fade-in">social platforms</h2>
                 <h2 class="subheading fade-in">keep up with <span class="name fade-in">jiggyflyjoe</span></h2>
-                <p class="connect-info fade-in">For a <em>wide variety</em> of reasons (which you can <a href="https://journal.jiggyflyjoe.com/ditching-the-algorithm-my-move-to-better-social-media/" target="_blank">read about here!</a>), I am no longer active on <em>any</em> Meta platform (Facebook, Instagram, etc.), X (formerly Twitter), or Substack.</p>
-                <p class="connect-info fade-in"><a href="https://bsky.app/profile/jiggyflyjoe.com" target="_blank"><strong>Bluesky</strong> <i class="fa-brands fa-bluesky"></i></a> and <a href="https://social.vivaldi.net/@jiggyflyjoe" target="_blank"><strong>Mastodon</strong> <i class="fa-brands fa-mastodon"></i></a> are the newer and “decentralized” micro-blogging platforms that I'm currently using similar to X/Twitter or Meta's Threads. I generally cross-post to both unless one or the other is a “re-post” or there's just something wrong with media (file's too big or small to be uploaded, etc.), so feel free to follow on either or both!</p>
-                <p class="connect-info fade-in">My decentralized alternative to the Meta-owned Instagram is the wonderful platform <a href="https://pixelfed.social/jiggyflyjoe" target="_blank"><strong>Pixelfed</strong> <i class="fa-solid fa-camera-retro"></i></a>! Give it a look and tell me the experience doesn't look almost <em>identical</em> to the one you get from Instagram!</p>
+                <p class="connect-info fade-in">For a <em>wide variety</em> of reasons (which you can <a href="https://journal.jiggyflyjoe.com/ditching-the-algorithm-my-move-to-better-social-media/" target="_blank">read about here!</a>), I am no longer active on any Meta platform (Facebook, Instagram, Threads, WhatsApp, etc.), X (formerly Twitter), or Substack. Instead, I've been using the newer, “decentralized” platforms Bluesky and Mastodon as a replacement for X/Twitter and Pixelfed in place of Instagram.</p>
+                <div class="navnew">
+                    <button class="fade-in" type="button" onclick="location.href='https://bsky.app/profile/jiggyflyjoe.com'">follow me on bluesky&nbsp;&nbsp;<i class="fa-brands fa-bluesky"></i></button><br>
+                    <button class="fade-in" type="button" onclick="location.href='https://social.vivaldi.net/@jiggyflyjoe'">follow me on mastodon&nbsp;&nbsp;<i class="fa-brands fa-mastodon"></i></button><br>
+                    <button class="fade-in" type="button" onclick="location.href='https://pixelfed.social/jiggyflyjoe'">follow me on pixelfed&nbsp;&nbsp;<i class="fa-solid fa-camera-retro"></i></button>
+                </div>
+
                 <h2 class="fade-in">join the community</h2>
                 <h2 class="subheading fade-in">connect with <span class="name fade-in">jiggyflyjoe</span></h2>
-                <p class="connect-info fade-in">You've just entered the group chat! Want to join the JIGGAWATT community, where we hang out, chat, and share all manner of things in our free time? Be sure to join our <a href="https://discord.gg/Qfp3mw5" target="_blank"><strong>Discord</strong> <i class="fa-brands fa-discord"></i></a> community! I've also recently launched a brand new message board forum to serve as a web extension of the JIGGAWATT called <a href="https://chat.jiggyflyjoe.com" target="_blank"><strong>Jiggy's Chat</strong> <i class="fa-solid fa-thumbtack"></i></a>. Join us and become <em>one of us...</em></p>
+                <p class="connect-info fade-in">You've just entered the group chat! Come join the JIGGAWATT community, where we hang out, chat, and share all manner of things in our free time. You can join the Discord server and/or my newly-launched public forum called Jiggy's Chat! You just might be the next person to become <em>one of us...</em></p>
+                <div class="navnew">
+                    <button class="fade-in" type="button" onclick="location.href='https://discord.gg/Qfp3mw5'">join the discord&nbsp;&nbsp;<i class="fa-brands fa-discord"></i></button><br>
+                    <button class="fade-in" type="button" onclick="location.href='https://chat.jiggyflyjoe.com'">join jiggy's chat forum&nbsp;&nbsp;<i class="fa-solid fa-thumbtack"></i></button>
+                </div>
+
                 <h2 class="fade-in">content hubs</h2>
                 <h2 class="subheading fade-in"><em>check out content by <span class="name fade-in">jiggyflyjoe</span></em></h2>
-                <p class="connect-info fade-in">If you're interested in what I'm busy creating lately, head on over to the <strong><a href="content.html">content page</a></strong>!</p>
+                <p class="connect-info fade-in">If you're looking for where you can find the content that I create for the web, you'll want to head over to the “content” page.</p>
+                <div class="navnew">
+                    <button class="fade-in" type="button" onclick="location.href='content.html'">visit the content page&nbsp;&nbsp;<i class="fa-solid fa-globe"></i></button>
+                </div>
             </section><br><br><br>
                 
         <!-- FOOTER -->
