--- a/content.html
+++ b/content.html
@@ -34,10 +34,19 @@
                 <div class="navnew">
                     <button class="fade-in" type="button" onclick="location.href='index.html'"><i class="fa-solid fa-arrow-left"></i>&nbsp;&nbsp;<em>back</em></button>
                 </div>
-                <p class="content-info fade-in">As I continue pursuing my computer programming and web development education online, I also make a few dollars here and there with content creation. This includes my blog and email newsletter publication <a href="https://journal.jiggyflyjoe.com" target="_blank"><strong><em>Jiggy's Journal</em></strong> <i class="fa-solid fa-blog"></i></a>, which you can currently subscribe to for free!</p>
-                <p class="content-info fade-in">I also occasionally stream live to both my <a href="https://twitch.tv/jiggyflyjoe" target="_blank"><strong>Twitch</strong> <i class="fa-brands fa-twitch"></i></a> and <a href="https://youtube.com/@jiggyflyjoe" target="_blank"><strong>YouTube</strong> <i class="fa-brands fa-youtube"></i></a> channels. Clips from these streams along with other original short video content can be found on <a href="https://tiktok.com/@jiggyflyjoe" target="_blank"><strong>TikTok</strong> <i class="fa-brands fa-tiktok"></i></a>.</p>
-                <p class="content-info fade-in">Lastly, any coding or development projects that I throw together can be found over on my <a href="https://github.com/jiggyflyjoe" target="_blank"><strong>GitHub</strong> <i class="fa-brands fa-github"></i></a> profile.</p>
-                <p class="content-info fade-in"><strong>If you enjoy my work and would like to support it, please consider subscribing to my content on those platforms!</strong> <br><em>You can optionally tip me or set up a recurring monthly gift over on my <a href="https://ko-fi.com/jiggyflyjoe" target="_blank"><strong>Ko-fi</strong> <i class="fa-solid fa-mug-saucer"></i></a> page.</em></p>
+                <p class="content-info fade-in">As I continue pursuing my computer programming and web development education online, I also make a few dollars here and there with content creation. This includes my blog and email newsletter publication <em>Jiggy's Journal</em>, which you can currently subscribe to for free!</p>
+                <p class="content-info fade-in">I also occasionally stream live to my Twitch channel. Clips from these streams along with other original video content can be found on YouTube and TikTok.</p>
+                <p class="content-info fade-in">And last but not least, any coding or development projects that I throw together can be found over on my GitHub page.</p>
+                <p class="content-info fade-in"><strong>If you enjoy or appreciate my work and would like to support it, please consider subscribing to my content on those platforms!</strong></p>
+                <p class="content-info fade-in note">You can optionally tip me or set up a recurring monthly gift over on my Ko-fi page!</p>
+                <div class="navnew">
+                    <button class="fade-in" type="button" onclick="location.href='https://journal.jiggyflyjoe.com'">read jiggy's journal&nbsp;&nbsp;<i class="fa-solid fa-blog"></i></button><br>
+                    <button class="fade-in" type="button" onclick="location.href='https://twitch.tv/jiggyflyjoe'">watch twitch streams&nbsp;&nbsp;<i class="fa-brands fa-twitch"></i></button><br>
+                    <button class="fade-in" type="button" onclick="location.href='https://youtube.com/@jiggyflyjoe'">watch youtube videos&nbsp;&nbsp;<i class="fa-brands fa-youtube"></i></button><br>
+                    <button class="fade-in" type="button" onclick="location.href='https://tiktok.com/@jiggyflyjoe'">watch tiktok shorts&nbsp;&nbsp;<i class="fa-brands fa-tiktok"></i></button><br>
+                    <button class="fade-in" type="button" onclick="location.href='https://github.com/jiggyflyjoe'">view github projects&nbsp;&nbsp;<i class="fa-brands fa-github"></i></button><br>
+                    <button class="fade-in" type="button" onclick="location.href='https://ko-fi.com/jiggyflyjoe'">tip me on ko-fi&nbsp;&nbsp;<i class="fa-solid fa-mug-saucer"></i></button>
+                </div>
             </section><br><br><br>
 
         <!-- FOOTER -->
